--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@
     box-sizing: border-box;
 }
 
+
+header{
+	text-align: center;
+	font-weight: bolder;
+	font-size: 5em;
+	margin-bottom: 20px;
+}
+
 .row{
     width: 100%;
 }
@@ -11,34 +19,44 @@ section{
     position: relative;
     border: 1px solid black;
     margin: 5px;
+	height: 150px;
+	padding: 0px;
 }
 
-.bonchon{
+.cycling{
     background-color: aqua;
     border: 1px solid black;
-    padding:5% ;
+    padding: 10px ;
 }
 
-.mcDonalds{
+.math{
     background-color: beige;
     border: 1px solid black;
-    padding:5% ;
+    padding:10px ;
 }
 
-.buffet{
+.programming{
     background-color: bisque;
     border: 1px solid black;
-    padding:5% ;
+    padding:10px ;
+
 }
 
-p{
-    padding: 10px;
+p{	
+	height: 90px;
+	position: absolute;
+	top: 40px; 
+	width: 100%;
+	padding: 15px;
+	text-align: left;
+	overflow:scroll;
+	
 }
 
 h1{
     position: absolute;
-    top: 2px;
-    right: 2px;
+    top: 0px;
+    right: 0px;
     font-size: 2em;
     justify-content: center;
     background-color: bisque;
@@ -48,12 +66,15 @@ h1{
     margin-top: 0px;
 }
 
-.col-lg-4{
-    position: relative;
-}
-
 #note{
-    clear: both;
+	clear: both;
+	height: 50 px;
+	background-color: blueviolet;
+	position: relative;
+	text-align: center;
+	margin: 5px;
+	
+
 }
 
 
